--- a/frontend/styles/playerStyles.css
+++ b/frontend/styles/playerStyles.css
@@ -13,15 +13,17 @@ body {
 }
 
 body {
-  background: #ffeff5;
+  background: white;
   position: relative;
 }
 
 .player {
   position: absolute;
-  top: 50%;
+  top: 68%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 2000;
+  margin-top: 2rem;
 }
 .player.play .player__timeline {
   transform: translateY(-90%);
@@ -48,7 +50,7 @@ body {
   transition: all 0.4s ease-in-out;
 }
 .player__album:before {
-  content: "";
+  content: '';
   width: 25px;
   height: 25px;
   position: absolute;
@@ -60,7 +62,7 @@ body {
   border-radius: 50%;
 }
 .player__album:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
@@ -192,7 +194,7 @@ body {
   border-radius: 15px;
   width: 0;
   height: 100%;
-  background: #fd6d94;
+  background: white;
 }
 .player__author {
   line-height: 1;
