--- a/frontend/styles/playerStyles.css
+++ b/frontend/styles/playerStyles.css
@@ -20,11 +20,10 @@ body {
 .player {
   position: absolute;
   top: 68%;
-  left: 50%;
+  left: 65%;
   transform: translate(-50%, -50%);
   z-index: 2000;
-  margin-top: 1rem;
-  margin-left: 20%;
+  margin-top: 2rem;
 }
 .player.play .player__timeline {
   transform: translateY(-90%);
@@ -51,7 +50,7 @@ body {
   transition: all 0.4s ease-in-out;
 }
 .player__album:before {
-  content: '';
+  content: "";
   width: 25px;
   height: 25px;
   position: absolute;
@@ -63,7 +62,7 @@ body {
   border-radius: 50%;
 }
 .player__album:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -208,4 +207,12 @@ body {
   margin: 0;
   font-size: 12px;
   color: #949494;
+}
+@media (max-width: 769px) {
+  .player {
+    position: absolute;
+    transform: scale(0.5, 0.5);
+    top: 68%;
+    left: 0%;
+  }
 }
