--- a/frontend/components/Music/music.scss
+++ b/frontend/components/Music/music.scss
@@ -336,30 +336,29 @@ $letterStagger: 0.1s;
   }
 
   @media screen and (max-width: 769px) {
-    .slider__slide-readmore,
     .slider__top-heading,
-    .slider__slide-subheading {
+    .slider__slide-subheading,
+    .slider__slide-readmore {
       position: absolute;
-      transform: scale(0.5, 0.5);
-      font-size: 10%;
     }
 
     .slider__top-heading {
       top: 32%;
-      left: 11%;
+      left: 8%;
       font-weight: bold;
+      font-size: 0.8rem;
     }
 
     .slider__slide-subheading {
       top: 35%;
-      left: 35%;
-      font-size: 1;
+      left: 32%;
+      font-size: 0.7rem;
     }
 
     .slider__slide-readmore {
       top: 38%;
-      left: 54%;
-      font-size: 1;
+      left: 52%;
+      font-size: 0.5rem;
       margin-top: 10px;
     }
   }
