design : 미디어 쿼리 수정

--- a/frontend/styles/background.css
+++ b/frontend/styles/background.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 769px) {
+/*@media screen and (max-width: 769px) {
   .slider__slide-readmore,
   .slider__top-heading,
   .slider__slide-subheading {
@@ -21,7 +21,7 @@
     left: 15%;
     font-size: 1;
   }
-}
+}*/
 /*
 @media (max-width: 1025px) {
   .slider__slide-readmore,
