--- a/frontend/components/Music/music.scss
+++ b/frontend/components/Music/music.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
   background: #000;
 }
 
@@ -174,7 +174,7 @@ $letterStagger: 0.1s;
       @include subTextsActiveSlide;
 
       &:before {
-        content: "";
+        content: '';
         position: absolute;
         left: -2px;
         top: -3px;
@@ -200,7 +200,7 @@ $letterStagger: 0.1s;
       height: 100%;
 
       &:after {
-        content: "";
+        content: '';
         z-index: $numOfParts + 1;
         position: absolute;
         left: 0;
@@ -230,7 +230,7 @@ $letterStagger: 0.1s;
         transition: transform $animTime/2 ease-in-out;
 
         &:before {
-          content: "";
+          content: '';
           position: absolute;
           width: 100vw;
           height: 100%;
@@ -277,63 +277,65 @@ $letterStagger: 0.1s;
     }
   }
 
-  &__control {
-    $size: 50px;
+  // &__control {
+  //   $size: 50px;
+  //   // @media screen and (max-width: 769px) {
+  //   //   $size: 30px;
+  //   // }
+  //   z-index: 3000;
+  //   position: absolute;
+  //   left: 50px;
+  //   top: 50%;
 
-    z-index: 100;
-    position: absolute;
-    left: 50px;
-    top: 50%;
+  //   :nth-child(1) {
+  //     top: -20vh;
+  //   }
+  //   :nth-child(2) {
+  //     top: 20vh;
+  //   }
+  //   :nth-child(3) {
+  //     top: 40vh;
+  //   }
+  //   width: $size;
+  //   height: $size;
+  //   margin-top: $size/-2;
+  //   border-radius: 50%;
+  //   background: rgba(255, 255, 255, 0.4);
+  //   transform: translateX($size * -1);
+  //   opacity: 0;
+  //   transition: $sliderReadyTrans;
+  //   cursor: pointer;
 
-    :nth-child(1) {
-      top: -20vh;
-    }
-    :nth-child(2) {
-      top: 20vh;
-    }
-    :nth-child(3) {
-      top: 40vh;
-    }
-    width: $size;
-    height: $size;
-    margin-top: $size/-2;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.4);
-    transform: translateX($size * -1);
-    opacity: 0;
-    transition: $sliderReadyTrans;
-    cursor: pointer;
+  //   &:before {
+  //     content: '';
+  //     position: absolute;
+  //     left: 50%;
+  //     top: 50%;
+  //     width: 20px;
+  //     height: 20px;
+  //     margin-left: -10px;
+  //     margin-top: -10px;
+  //     border: 2px solid #000;
+  //     border-bottom: none;
+  //     border-right: none;
+  //     transform: translateX(5px) rotate(-45deg);
+  //   }
 
-    &:before {
-      content: "";
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      width: 20px;
-      height: 20px;
-      margin-left: -10px;
-      margin-top: -10px;
-      border: 2px solid #000;
-      border-bottom: none;
-      border-right: none;
-      transform: translateX(5px) rotate(-45deg);
-    }
+  //   &--right {
+  //     left: auto;
+  //     right: 50px;
+  //     transform: translateX($size);
 
-    &--right {
-      left: auto;
-      right: 50px;
-      transform: translateX($size);
+  //     &:before {
+  //       transform: translateX(-5px) rotate(135deg);
+  //     }
+  //   }
 
-      &:before {
-        transform: translateX(-5px) rotate(135deg);
-      }
-    }
-
-    @include sliderReady {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
+  //   @include sliderReady {
+  //     transform: translateX(0);
+  //     opacity: 1;
+  //   }
+  // }
 
   @media screen and (max-width: 769px) {
     .slider__top-heading,
@@ -343,16 +345,17 @@ $letterStagger: 0.1s;
     }
 
     .slider__top-heading {
-      top: 32%;
-      left: 8%;
+      top: 4.3%;
       font-weight: bold;
-      font-size: 0.8rem;
+      font-size: 2.3rem;
+      padding-bottom: 0.5rem;
+      width: 100%;
+      text-align: center;
+      left: -60%;
     }
 
     .slider__slide-subheading {
-      top: 35%;
-      left: 32%;
-      font-size: 0.7rem;
+      display: none;
     }
 
     .slider__slide-readmore {
