--- a/frontend/components/TTS/tts.scss
+++ b/frontend/components/TTS/tts.scss
@@ -37,8 +37,9 @@ $letterStagger: 0.1s;
     top: 100px;
     text-align: center;
     font-size: 2rem;
-    margin-left: 42%;
-
+    // margin-left: 42%;
+    text-align: center;
+    width: 100%;
     text-transform: uppercase;
     letter-spacing: 2.5px;
     transition: $sliderReadyTrans;
@@ -116,9 +117,9 @@ $letterStagger: 0.1s;
     &-button {
       font-size: 18px;
       font-weight: 200;
-      padding: 1em;
-      width: 50%;
-
+      padding: 1rem;
+      width: 60%;
+      // left: -;
       box-sizing: border-box;
       border: 4px solid #8977ad;
       border-radius: 8px;
@@ -131,6 +132,9 @@ $letterStagger: 0.1s;
       transform: translateY(20px);
       z-index: 300;
       @include subTextsActiveSlide;
+      @media screen and (max-width: 769px) {
+        padding: 0.5rem;
+      }
     }
     &-subheadingss {
       margin-bottom: 2rem;
@@ -138,7 +142,7 @@ $letterStagger: 0.1s;
       letter-spacing: 2px;
       transform: translateY(20px);
       z-index: 500;
-      width: 50%;
+      width: 60%;
       color: #000;
       @include subTextsActiveSlide;
     }
@@ -151,8 +155,9 @@ $letterStagger: 0.1s;
     &-inputs {
       font-size: 1.3rem;
       margin-bottom: 2rem;
+
       height: 6%;
-      width: 50%;
+      width: 60%;
       border: 1px solid white;
       box-sizing: border-box;
       ::placeholder {
@@ -336,23 +341,17 @@ $letterStagger: 0.1s;
 
   &__control {
     $size: 50px;
-
-    z-index: 100;
+    // @media screen and (max-width: 769px) {
+    //   $size: 30px;
+    // }
+    z-index: 3000;
     position: absolute;
     left: 50px;
     top: 50%;
-    // :first-child {
-    //   display: none;
+
+    // @media screen and (max-width: 769px) {
+    //   color: white;
     // }
-    :nth-child(1) {
-      top: -20vh;
-    }
-    :nth-child(2) {
-      top: 20vh;
-    }
-    :nth-child(3) {
-      top: 40vh;
-    }
     width: $size;
     height: $size;
     margin-top: $size/-2;
@@ -366,7 +365,7 @@ $letterStagger: 0.1s;
     &:before {
       content: '';
       position: absolute;
-      left: 50%;
+      // left: 50%;
       top: 50%;
       width: 20px;
       height: 20px;
@@ -376,6 +375,10 @@ $letterStagger: 0.1s;
       border-bottom: none;
       border-right: none;
       transform: translateX(5px) rotate(-45deg);
+      // @media screen and (max-width: 769px) {
+      //   width: 10px;
+      //   height: 10px;
+      // }
     }
 
     &--right {
@@ -388,9 +391,76 @@ $letterStagger: 0.1s;
       }
     }
 
+    @media screen and (max-width: 764px) {
+      padding-top: 5rem;
+      padding-right: 19rem;
+      width: 1.7rem;
+      height: 1.7rem;
+      // left: 20rem;
+
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      top: 9.7%;
+      &:before {
+        border: 3px solid white;
+        border-bottom: none;
+        border-right: none;
+        transform: translateX(5px) rotate(-45deg);
+      }
+      color: white;
+      background: none;
+      &--right {
+        // right: 1.5rem;
+        // left: 0;
+        // right: 20rem;
+
+        transform: translateX($size);
+        transform: translateY($size);
+        // right: 80%;
+        &:before {
+          border: 3px solid white;
+          border-bottom: none;
+          left: 88%;
+          border-right: none;
+          transform: translateX(-5px) rotate(135deg);
+        }
+      }
+    }
     @include sliderReady {
       transform: translateX(0);
       opacity: 1;
+    }
+  }
+  @media screen and (max-width: 769px) {
+    .slider__top-heading,
+    .slider__slide-subheading,
+    .slider__slide-readmore {
+      position: absolute;
+    }
+
+    .slider__top-headings {
+      // left: -19%;
+      font-weight: bold;
+      top: 4.3%;
+      font-size: 1.8rem;
+    }
+
+    .slider__slide-subheadings {
+      font-size: 1.2rem;
+    }
+
+    .slider__slide-readmore {
+      top: 38%;
+      left: 52%;
+      font-size: 0.5rem;
+      margin-top: 10px;
+    }
+    // &-button {
+    //   padding: 0;
+    // }
+    .-button {
+      padding: 0;
     }
   }
 }
