--- a/frontend/styles/playerStyles.css
+++ b/frontend/styles/playerStyles.css
@@ -47,7 +47,7 @@ body {
   transition: all 0.4s ease-in-out;
 }
 .player__album:before {
-  content: "";
+  content: '';
   width: 25px;
   height: 25px;
   position: absolute;
@@ -59,7 +59,7 @@ body {
   border-radius: 50%;
 }
 .player__album:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
@@ -209,9 +209,9 @@ body {
   .player {
     position: relative;
     transform: scale(0.7, 0.7);
-    width: 115%;
-    right: 5%;
-    top: 75%;
+    width: 130%;
+    right: 15%;
+    top: 83%;
   }
   .player_wrapper {
     position: absolute;
