--- a/frontend/styles/togglemenu.css
+++ b/frontend/styles/togglemenu.css
@@ -16,20 +16,20 @@
   }
 }*/
 
-@media screen and (max-width: 769px) {
+/* @media screen and (max-width: 769px) {
   .musicList {
-    transform: scale(0.5, 0.5);
+    transform: scale(0.8, 0.8);
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     align-self: center;
     z-index: 600;
-    right: 20%;
+    right: 15%;
     bottom: 12%;
   }
   a {
     width: 100%;
     height: 120px;
   }
-}
+} */
 /*각 디바이스별 미디어 쿼리 생성.*/
