--- a/frontend/components/TTS/tts.scss
+++ b/frontend/components/TTS/tts.scss
@@ -227,26 +227,42 @@ $letterStagger: 0.1s;
     }
 
     &-readmores {
-      position: relative;
-      font-size: 14px;
-      text-transform: lowercase;
+      position: absolute;
+      font-size: 1rem;
+      text-transform: uppercase;
       backface-visibility: hidden;
-      transform: translateY(-10px);
+      letter-spacing: 0.1rem;
+      // transform: translateY(-10px);
+      z-index: 4000;
       cursor: pointer;
+      top: 54%;
+      left: 0;
+      padding-right: 0rem;
+      padding-bottom: 4rem;
+      margin-bottom: 4rem;
 
-      @include subTextsActiveSlide;
-
+      // @include subTextsActiveSlide;
+      @media screen and (max-width: 700px) {
+        display: none;
+        // padding-right: 0rem;
+      }
       &:before {
         content: '';
+        z-index: 8000;
         position: absolute;
         left: -2px;
-        top: -3px;
-        width: calc(100% + 4px);
-        height: calc(100% + 6px);
-        background: rgba(255, 255, 255, 0.4);
+        top: -5px;
+        width: calc(100%);
+        height: calc(125%);
+        background: rgba(255, 255, 255, 0.3);
         transform: scaleX(0.2);
+        transform: scaleY(0.5);
         transform-origin: 0 50%;
         transition: transform 0.3s;
+        border-radius: 8px;
+        @media screen and (max-width: 900px) {
+          display: none;
+        }
       }
 
       &:hover:before {
@@ -341,103 +357,9 @@ $letterStagger: 0.1s;
     }
   }
 
-  // &__control {
-  //   $size: 50px;
-  //   // @media screen and (max-width: 769px) {
-  //   //   $size: 30px;
-  //   // }
-  //   z-index: 3000;
-  //   position: absolute;
-  //   left: 50px;
-  //   top: 50%;
-
-  //   // @media screen and (max-width: 769px) {
-  //   //   color: white;
-  //   // }
-  //   width: $size;
-  //   height: $size;
-  //   margin-top: $size/-2;
-  //   border-radius: 50%;
-  //   background: rgba(255, 255, 255, 0.4);
-  //   transform: translateX($size * -1);
-  //   opacity: 0;
-  //   transition: $sliderReadyTrans;
-  //   cursor: pointer;
-
-  //   &:before {
-  //     content: '';
-  //     position: absolute;
-  //     // left: 50%;
-  //     top: 50%;
-  //     width: 20px;
-  //     height: 20px;
-  //     margin-left: -10px;
-  //     margin-top: -10px;
-  //     border: 2px solid #000;
-  //     border-bottom: none;
-  //     border-right: none;
-  //     transform: translateX(5px) rotate(-45deg);
-  //     // @media screen and (max-width: 769px) {
-  //     //   width: 10px;
-  //     //   height: 10px;
-  //     // }
-  //   }
-
-  //   &--right {
-  //     left: auto;
-  //     right: 50px;
-  //     transform: translateX($size);
-
-  //     &:before {
-  //       transform: translateX(-5px) rotate(135deg);
-  //     }
-  //   }
-
-  //   @media screen and (max-width: 764px) {
-  //     padding-top: 5rem;
-  //     padding-right: 19rem;
-  //     width: 1.7rem;
-  //     height: 1.7rem;
-  //     // left: 20rem;
-
-  //     display: flex;
-  //     align-items: center;
-  //     flex-direction: column;
-  //     top: 9.7%;
-  //     &:before {
-  //       border: 3px solid white;
-  //       border-bottom: none;
-  //       border-right: none;
-  //       transform: translateX(5px) rotate(-45deg);
-  //     }
-  //     color: white;
-  //     background: none;
-  //     &--right {
-  //       // right: 1.5rem;
-  //       // left: 0;
-  //       // right: 20rem;
-
-  //       transform: translateX($size);
-  //       transform: translateY($size);
-  //       // right: 80%;
-  //       &:before {
-  //         border: 3px solid white;
-  //         border-bottom: none;
-  //         right: 3.5rem;
-  //         border-right: none;
-  //         transform: translateX(-5px) rotate(135deg);
-  //       }
-  //     }
-  //   }
-  //   @include sliderReady {
-  //     transform: translateX(0);
-  //     opacity: 1;
-  //   }
-  // }
   @media screen and (max-width: 769px) {
     .slider__top-heading,
-    .slider__slide-subheading,
-    .slider__slide-readmore {
+    .slider__slide-subheading {
       position: absolute;
     }
 
@@ -453,12 +375,12 @@ $letterStagger: 0.1s;
       font-size: 1.2rem;
     }
 
-    .slider__slide-readmore {
-      top: 38%;
-      left: 52%;
-      font-size: 0.5rem;
-      margin-top: 10px;
-    }
+    // .slider__slide-readmore {
+    //   top: 38%;
+    //   left: 52%;
+    //   font-size: 0.5rem;
+    //   margin-top: 10px;
+    // }
     // &-button {
     //   padding: 0;
     // }
