--- a/frontend/components/Music/music.scss
+++ b/frontend/components/Music/music.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   background: #000;
 }
 
@@ -179,7 +179,7 @@ $letterStagger: 0.1s;
       padding-right: 0rem;
       padding-bottom: 4rem;
       margin-bottom: 4rem;
-      top: 46%;
+      top: 14%;
       @media screen and (max-width: 900px) {
         display: none;
       }
@@ -187,7 +187,7 @@ $letterStagger: 0.1s;
         display: none;
       }
       &:before {
-        content: '';
+        content: "";
         position: absolute;
         left: -2px;
         top: -5px;
@@ -219,7 +219,7 @@ $letterStagger: 0.1s;
       height: 100%;
 
       &:after {
-        content: '';
+        content: "";
         z-index: $numOfParts + 1;
         position: absolute;
         left: 0;
@@ -249,7 +249,7 @@ $letterStagger: 0.1s;
         transition: transform $animTime/2 ease-in-out;
 
         &:before {
-          content: '';
+          content: "";
           position: absolute;
           width: 100vw;
           height: 100%;
@@ -317,7 +317,7 @@ $letterStagger: 0.1s;
     // cursor: pointer;
 
     &:before {
-      content: '';
+      content: "";
       position: absolute;
       left: 50%;
       top: 50%;
@@ -464,4 +464,13 @@ $letterStagger: 0.1s;
     left: 25%;
     font-size: 0.5rem;
   }
+}
+
+.slide_btn {
+  position: fixed;
+  z-index: 2000;
+  width: 200px;
+  height: 100px;
+  top: 47%;
+  right: 1%;
 }
