desing : slide btn 위치조정

--- a/frontend/components/TTS/tts.scss
+++ b/frontend/components/TTS/tts.scss
@@ -248,7 +248,7 @@ $letterStagger: 0.1s;
       z-index: 4000;
       cursor: pointer;
       top: 47%;
-      left: 10px;
+      left: 0%;
       padding-right: 0rem;
       padding-bottom: 4rem;
       margin-bottom: 4rem;
@@ -262,7 +262,7 @@ $letterStagger: 0.1s;
         content: "";
         z-index: 8000;
         position: fixed;
-        left: 10px;
+        left: 0%;
         top: 47%;
         width: 180px;
         height: 100px;
