desgin : fix error

--- a/frontend/styles/background.css
+++ b/frontend/styles/background.css
@@ -1,8 +1,8 @@
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   *:hover {
     pointer-events: none !important;
   }
-}
+} */
 
 *,
 *:before,
